--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,30 @@
+certifi==2018.4.16
+chardet==3.0.4
 click==6.7
+decorator==4.3.0
 Flask==1.0.2
 google-api-python-client==1.6.7
 httplib2==0.11.3
+idna==2.6
+ipython-genutils==0.2.0
 itsdangerous==0.24
 Jinja2==2.10
+jsonschema==2.6.0
+jupyter-core==4.4.0
 MarkupSafe==1.0
+nbformat==4.4.0
+numpy==1.14.3
 oauth2client==4.1.2
+pandas==0.23.0
+plotly==2.7.0
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
+python-dateutil==2.7.3
+pytz==2018.4
+requests==2.18.4
 rsa==3.4.2
 six==1.11.0
+traitlets==4.3.2
 uritemplate==3.0.0
+urllib3==1.22
 Werkzeug==0.14.1
